--- a/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
+++ b/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
@@ -3,7 +3,7 @@
   <div class=" modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title p-b-15" id="ModalLabel">Detalle de una Factura</h4>
+        <h4 class="modal-title p-b-15" id="ModalLabel">Modal de Anexos</h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -14,7 +14,7 @@
           <div class="col-md-12">
             <div class="panel panel-inverse">
               <div class="panel-heading">
-                <h4 class="panel-title">Lista - Gastos</h4>
+                <h4 class="panel-title">Lista - Anexos</h4>
               </div>
               <div class="panel-body table-responsive">
                 <table id="tabla_detalle_factura"
@@ -61,7 +61,7 @@
                       </td>
                       <td>
                         <div class="text-center">
-                          <a><em class="fas fa-percentage" style="font-size: 20px;" (click)="modalImpuestos()"></em></a>
+                          <a><em class="fas fa-percentage" style="font-size: 20px;"></em></a>
                         </div>
                       </td>
                       <td>
@@ -86,6 +86,3 @@
     </div>
   </div>
 </div>
-
-<!-- Modal Impuestos -->
-<app-modal-impuestos></app-modal-impuestos>
