[add] ajustes de pruebas

--- a/src/app/modulos/carga-documentos/saldos/saldos.component.html
+++ b/src/app/modulos/carga-documentos/saldos/saldos.component.html
@@ -3,7 +3,7 @@
     <table class="table table-hover" id="productos">
       <thead>
         <tr>
-          <th colspan="2">Saldos</th>
+          <th colspan="2" style="padding-left: inherit;">Saldos</th>
         </tr>
       </thead>
       <tbody>
