[fix]  listar conceptos

--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -126,10 +126,10 @@
     </div>
   </div>
 </form>
-<div class="row mt-3">
+<div class="row mt-3 text-right">
   <button (click)="submitFormulario($event.target)" class="btn btn-primary mt-3"
     [disabled]="controles.conceptos.value.length <= 0">
-    Agregar
+    Agregar Comprobante
   </button>
 
   <button class="btn btn-danger ml-2 mt-3" (click)="cancelar()">
