[add] ajuste boton interprete

--- a/src/app/modulos/complemento-pago/list-complemento-pago-rci/list-complemento-pago-rci.component.html
+++ b/src/app/modulos/complemento-pago/list-complemento-pago-rci/list-complemento-pago-rci.component.html
@@ -65,9 +65,8 @@
                       class="far fa-file-pdf"></i> </a>
                   <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
                       class="far fa-file-code"></i> </a>
-                  <button *ngIf="item.xml && item.xml != ''" class="btn ml-2"
-                    (click)="mostrarInterprete($event.target, item.folio_fiscal)">
-                    <i class="fas fa-eye mr-1"></i>
+                  <button *ngIf="item.xml && item.xml != ''" class="btn ml-2">
+                    <i class="fas fa-eye mr-1" (click)="mostrarInterprete($event.target, item.folio_fiscal)"></i>
                   </button>
                   <button class="btn ml-2" (click)="mostrarModal(item.documento_id, item.folio_fiscal)"><i
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
