[add] ajuste de botones de modales

--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -52,21 +52,18 @@
               class="form-control">
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-percent" (click)="modal('impuestos', i)">
-              </em>
+            <button class="btn btn-primary" (click)="modal('impuestos', i)">
+              <em class="fa fa-percent"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-file" (click)="modal('detalle')">
-              </em>
+            <button class="btn btn-primary" (click)="modal('detalle')">
+              <em class="fa fa-file"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-file-archive" (click)="modal('adicionales')">
-              </em>
+            <button class="btn btn-primary" (click)="modal('adicionales')">
+              <em class="fa fa-file-archive"></em>
             </button>
           </th>
           <th class="text-center" scope="">
