--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -58,24 +58,18 @@
               (keyup)="cambiarEstatusTotalModificado()">
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-percent" (click)="modal('impuestos')">
-
-              </em>
+            <button class="btn btn-primary" (click)="modal('impuestos')">
+              <em class="fa fa-percent"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-file" (click)="modal('detalle')">
-
-              </em>
+            <button class="btn btn-primary" (click)="modal('detalle')">
+              <em class="fa fa-file"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary">
-              <em class="fa fa-file-archive" (click)="modal('adicionales')">
-
-              </em>
+            <button class="btn btn-primary" (click)="modal('adicionales')">
+              <em class="fa fa-file-archive"></em>
             </button>
           </th>
           <th class="text-center" scope="">
