--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -36,7 +36,8 @@
         <table class="table">
           <caption></caption>
           <thead>
-            <th scope=""> Folio Comprobación {{ numero_comprobacion }}</th>
+            <th scope=""> Folio Comprobación</th>
+            <th scope=""> {{ numero_comprobacion }}</th>
           </thead>
           <tbody>
             <tr>
