--- a/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-extranjero/carga-comprobante-extranjero.component.html
@@ -119,7 +119,7 @@
     <!-- Fin de la lista de conceptos -->
   </ng-container>
   <div class="row mt-3">
-    <div class="col-md-3">
+    <div class="col-md-3 ml-auto ">
       <label for="tipo_cambio">Total a Reembolsar:</label>
       <input currencyMask [options]="{ thousands: ',', decimal: '.' }" type="text" name="tipo_cambio" id="tipo_cambio'"
         maxlength="50" class="form-control" formControlName="total" placeholder="" disabled>
@@ -127,12 +127,12 @@
   </div>
 </form>
 <div class="row mt-3 text-right">
-  <button (click)="submitFormulario($event.target)" class="btn btn-primary mt-3"
+
+  <button class="btn btn-danger ml-auto mt-3" (click)="cancelar()">
+    Cancelar
+  </button>
+  <button (click)="submitFormulario($event.target)" class="btn btn-primary ml-2 mt-3"
     [disabled]="controles.conceptos.value.length <= 0">
     Agregar Comprobante
-  </button>
-
-  <button class="btn btn-danger ml-2 mt-3" (click)="cancelar()">
-    Cancelar
   </button>
 </div>
