[add] ajustes de ichus en modales login dinamico y filtro

--- a/src/app/compartidos/modal-adicional/modal-adicional.component.html
+++ b/src/app/compartidos/modal-adicional/modal-adicional.component.html
@@ -2,8 +2,9 @@
   style="max-width:100%;">
   <div class=" modal-dialog modal-lg" role="document">
     <div class="modal-content">
+
       <div class="modal-header">
-        <h4 class="modal-title p-b-15" id="ModalLabel">Detalle de Impuestos </h4>
+        <h4 class="modal-title p-b-15" id="ModalLabel">Detalle de Adicional </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -21,11 +22,10 @@
           </div>
         </div>
       </div>
+
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-          Cancelar
-        </button>
       </div>
+
     </div>
   </div>
 </div>
