--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -32,7 +32,7 @@
               <th scope="">Centro Costo</th>
               <th scope="">Compañía</th>
               <th scope="">Usuario Aprobador</th>
-              <th scope="">Acción </th>
+              <th scope="">Acciónes </th>
             </tr>
           </thead>
 
@@ -41,16 +41,16 @@
               <td>{{ item.nombre_usuario}}</td>
               <td>{{ item.folio_comprobacion}}</td>
               <td>{{ item.descripcion}}</td>
-              <td>{{ item.fecha_creacion}}</td>
+              <td>{{ item.fecha_creacion | date: 'yyyy-MM-dd' }}</td>
               <td>{{ item.motivo}}</td>
-              <td>{{ item.monto_reembolsar}}</td>
+              <td>{{ item.monto_reembolsar | currency: '$'}}</td>
               <td>{{ item.nombre_moneda}}</td>
               <td>{{ item.nombre_cc}}</td>
               <td>{{ item.nombre_compania}}</td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
                 <div style="white-space: nowrap">
-                  <a class="btn btn-primary text-white btn ml-2" (click)="eliminar(item.folio_comprobacion)">
+                  <a class="btn btn-danger text-white btn ml-2" (click)="eliminar(item.folio_comprobacion)">
                     <i class="far fa-trash-alt"> </i> Borrador
                   </a>
                   <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.id)">
