--- a/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
+++ b/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
@@ -22,20 +22,20 @@
                   <caption></caption>
                   <thead>
                     <tr>
-                      <th scope="">id</th>
-                      <th scope="">linea</th>
-                      <th scope="">Cantidad</th>
-                      <th scope="">Descripción</th>
-                      <th scope="">Valor Unitario</th>
-                      <th scope="">Unidad</th>
-                      <th scope="">Importe</th>
-                      <th scope="">Concepto</th>
-                      <th scope="">Monto a Reembolsar</th>
-                      <th scope="">Comprobante Fiscal</th>
-                      <th scope="">Impuestos</th>
-                      <th scope="">Anexos</th>
-                      <th scope="">Adicional</th>
-                      <th scope="">No aplica</th>
+                      <th scope="col">id</th>
+                      <th scope="col">linea</th>
+                      <th scope="col">Cantidad</th>
+                      <th scope="col">Descripción</th>
+                      <th scope="col">Valor Unitario</th>
+                      <th scope="col">Unidad</th>
+                      <th scope="col">Importe</th>
+                      <th scope="col">Concepto</th>
+                      <th style="width: 250px;" scope="col">Monto a Reembolsar</th>
+                      <th scope="col">Comprobante Fiscal</th>
+                      <th scope="col">Impuestos</th>
+                      <th scope="col">Anexos</th>
+                      <th scope="col">Adicional</th>
+                      <th scope="col">No aplica</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -48,7 +48,7 @@
                       <td>{{factura.unidad}}</td>
                       <td>{{factura.importe}}</td>
                       <td>{{factura.concepto }}</td>
-                      <td>
+                      <td class="text-center" scope="">
                         <div>
                           <label><small>monto</small></label>
                           <input type="text">
