--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/componentes/filtro-comprobacion/filtro-comprobacion-gv.component.html
@@ -12,7 +12,7 @@
             <form [formGroup]="filtro_comprobacion">
               <fieldset>
                 <legend class="p-b-15" style="font-size:1rem">Filtrar Comprobaciones</legend>
-                <div class="form-row">
+                <div class="form-row mt-2">
 
                   <div class="col-md-3">
                     <label for="contribuyente">Contribuyente<span class="text-danger">*</span> </label>
@@ -29,7 +29,7 @@
                     </select2>
                   </div>
 
-                  <div class="col-md-3">
+                  <div class="col-md-3 ">
                     <label for="selec_estatus_filtro">Estatus </label>
                     <select2 [data]="lista_estatus" [options]="{placeholder: 'Seleccione Estatus'}"
                       (valueChanged)="onEstatusSeleccionado($event)" name="selec_estatus_filtro"
@@ -38,26 +38,36 @@
                   </div>
                   <div class=" col-md-3">
                     <label for="folio_comprobacion">Folio Comprobación </label>
-                    <input formControlName="folio_comprobacion" placeholder="Folio Comprobación" type="text"
-                      class="form-control" maxlength="20" name="folio_comprobacion" id="folio_comprobacion_filtro" />
+                    <input (keydown)="validaFolioComprobacio($event)" formControlName="folio_comprobacion"
+                      placeholder="Folio Comprobación" type="text" class="form-control" maxlength="20"
+                      name="folio_comprobacion" id="folio_comprobacion_filtro" />
+                    <small class="form-group col-12 text-danger" *ngIf=" (!this.filtro_comprobacion.get('folio_comprobacion').valid
+                      && this.filtro_comprobacion.get('folio_comprobacion').touched
+                      && this.filtro_comprobacion.get('folio_comprobacion').status === 'INVALID' ? true: false) ">
+                      La estructura del Folio Comprobación es invalida.
+                    </small>
                   </div>
+
+                </div>
+
+                <div class="form-row mt-3">
 
                   <div class="col-md-3">
                     <label for="nombre">Registro Desde </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_ini" name="fechaIniViaje"
-                      id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Fecha Inicio'"
+                      id="fecha_inicio_viaje_anticipo_gasto" [placeholder]="'Registro Desde'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaInicioViaje($event)">
                     </my-date-picker>
                   </div>
-
                   <div class="col-md-3">
                     <label for="nombre">Registro Hasta </label>
                     <my-date-picker [ngModelOptions]="{standalone: true}" [(ngModel)]="fech_fin"
-                      name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Fecha Fin'"
+                      name="fechaFinViaje_anticipo_viaje" id="fechaFinViaje_status_sap" [placeholder]="'Registro Hasta'"
                       [options]="_globals.myDatePickerOptions" (dateChanged)="onFechaFinViaje($event)"></my-date-picker>
                   </div>
 
                 </div>
+
                 <div class="form-group row">
                   <div class=" col-sm-12 text-right">
                     <button class="btn btn-sm btn-danger m-r-5 " style="margin-left: 10px;"
