--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -86,12 +86,12 @@
             <hr />
             <p *ngIf="bandera_proveedor" class="text-center text-grey-darker">
               Aviso de Privacidad
-              <a
-                href="https://utils-next.s3.amazonaws.com/avisos-privacidad/rci/PDP.API.001.2.2+Aviso+Privacidad_Proveedores_RCI+(noviembre+2020)+(Correo+electr%C3%B3nico)+(2).pdf">
+              <a href="https://utils-next.s3.amazonaws.com/avisos-privacidad/rci/PDP.API.001.2.2+Aviso+Privacidad_Proveedores_RCI+(noviembre+2020)+(Correo+electr%C3%B3nico)+(2).pdf"
+                target="_blank">
                 RCI
               </a>,
-              <a
-                href="https://utils-next.s3.amazonaws.com/avisos-privacidad/rci/PDP.API.001.5.2+Aviso+Privacidad_Proveedores_HD+(noviembre+2020)+(Correo+Electr%C3%B3nico)+(2).pdf">
+              <a href="https://utils-next.s3.amazonaws.com/avisos-privacidad/rci/PDP.API.001.5.2+Aviso+Privacidad_Proveedores_HD+(noviembre+2020)+(Correo+Electr%C3%B3nico)+(2).pdf"
+                target="_blank">
                 HD
               </a>
             </p>
