--- a/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
@@ -16,7 +16,8 @@
       <div class="panel-body  table-responsive">
         <table #datatableElement id="tabla_comprobaciones" datatable [dtOptions]="globals.dtOptions"
           [dtTrigger]="dtTrigger"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
+          width="100%" style="max-width: 100%;">
           <caption></caption>
           <thead>
             <tr>
