--- a/src/app/modulos/carga-documentos/modal-detalle-oc-mx/modal-detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/modal-detalle-oc-mx/modal-detalle-oc-mx.component.html
@@ -25,9 +25,9 @@
             <p class="pmargen1">
               <strong> Fecha Orden: </strong> {{ orden_oc.fecha_orden | date:'yyyy-MM-dd' }}
             </p>
-            <p class="pmargen1">
+            <!--  <p class="pmargen1">
               <strong> Fecha Vencimiento: </strong> {{ orden_oc.fecha_vencimiento_anticipo | date:'yyyy-MM-dd' }}
-            </p>
+            </p> -->
           </div>
         </div>
         <br>
